welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: not found: value efface
     avance;efface;
            ^SlugHunting:13: error: not found: value efface
       avance;efface;
              ^SlugHunting:15: error: not found: value efface
       droite;droite;avance;efface;
                            ^