welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def effacer {
  baisseBrosse;leveBrosse;
}

def hunt() {
  while (!estSurBiscuit) {
   if (isFacingTrail){
     avance;efface;
   } else {
     gauche;
     if (isFacingTrail) {
       avance;efface;
     } else {
       droite;droite;avance;efface;
     }
   }
  }
}

def isFacingTrail():Boolean = {
  if (estFaceMur) return false;
  else {
    avance;
    var color = getCouleurSol;
    recule;
    return color == Color.green;
  }  
}